# OriginC

./: CMakeLists.txt
C/: BasicDataType.c  Operator.c  PositionalNotation.c  ProgramFlowControl.c
C/Primary/: Array.c  Constant.c  DynamicMemoryAllocation.c  Enumeration.c  File.c  Function.c  HeaderFile.c  HeaderFile.h  Pointer.c  Pretreatment.c  Static.c  Struct.c  Union.c  VariableScope.c
C/Primary/StandardLibrary/: MathH.c  StdioH.c  StdlibH.c  StringH.c  TimeH.c
