cmake_minimum_required(VERSION 3.19)
project(OriginC C)

set(CMAKE_C_STANDARD 11)

#add_executable(OriginC C/Primary/HelloWorld.c)
#add_executable(OriginC C/Primary/BasicDataType.c)
#add_executable(OriginC C/Primary/Pointer.c)
#add_executable(OriginC C/Primary/Constant.c)
#add_executable(OriginC C/Primary/Operator.c)
#add_executable(OriginC C/Primary/PositionalNotation.c)
#add_executable(OriginC C/Primary/ProgramFlowControl.c)
#add_executable(OriginC C/Primary/Enumeration.c)
#add_executable(OriginC C/Primary/Function.c C/Primary/HeaderFile.h C/Primary/HeaderFile.c)
#add_executable(OriginC C/Primary/VariableScope.c)
#add_executable(OriginC  C/Primary/VariableScope.c C/Primary/Static.c)
#add_executable(OriginC C/Primary/StandardLibrary/StringH.c)
#add_executable(OriginC C/Primary/StandardLibrary/TimeH.c)
#add_executable(OriginC C/Primary/StandardLibrary/MathH.c)
#add_executable(OriginC C/Primary/StandardLibrary/StdioH.c)
#add_executable(OriginC C/Primary/StandardLibrary/StdlibH.c)
#add_executable(OriginC C/Primary/Pretreatment.c)
#add_executable(OriginC C/Primary/Array.c)
#add_executable(OriginC C/Primary/DynamicMemoryAllocation.c)
add_executable(OriginC C/Primary/Struct.c)
#这个add_executable貌似只能有一句,不能重复多个